Added project report

--- a/notebooks/grad_cam.ipynb
+++ b/notebooks/grad_cam.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b0b1a882",
    "metadata": {
     "executionInfo": {
@@ -38,7 +38,18 @@
     },
     "id": "b0b1a882"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -60,7 +71,8 @@
     "MODEL_PATH = \"..models/residual_cnn.pt\"\n",
     "OUTPUT_DIR = \"..outputs/gradcam\"\n",
     "\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)"
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "DEVICE"
    ]
   },
   {
